@@ -38,6 +38,8 @@ Version dev
     * itwp.edificioreligioso.tStile - Created
     * itwp.personaggio.tNome - Created
     * itwp.personaggio.tAttore - Created
+    * itwp.santo.tBornDie - Created
+    * itwp.santo.tReligioni - Created
 
 Version 5.0 (11/03/2012)
     * itwp.operaarte add tMateriale
